# pori_ipr_python

./: .gitignore  404.html  MANIFEST.in  README.md  buildout.cfg  index.html  mkdocs.yml  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: automerge_back_to_dev.yml  publishdevdocs.yml  publishgkbdevdocs.yml  pypipublish.yml  pytest.yml  quick-pytest.yml
docs/: index.md  variant_inputs.md
docs/docs_graphkb/reference/graphkb/: constants.md  genes.md  match.md  statement.md  types.md  util.md  vocab.md
docs/optional_content/: comparators.md  images.md  immune.md  index.md  mutation_burden.md  pairwise_expression.md  patient.md  signature.md
docs/overrides/: 404.html
genomic_report/: annotate.py  constants.py  inputs.py  ipr.py  main.py  summary.py  types.py  util.py
graphkb/: classes.html  packages.html
ipr/: annotate.py  connection.py  constants.py  content.spec.json  inputs.py  ipr.py  main.py  summary.py  therapeutic_options.py  types.py  util.py
optional_content/: index.html
optional_content/comparators/: index.html
optional_content/images/: index.html
optional_content/immune/: index.html
optional_content/mutation_burden/: index.html
optional_content/pairwise_expression/: index.html
optional_content/patient/: index.html
optional_content/signature/: index.html
reference/ipr/: annotate.html  connection.html  inputs.html  ipr.html  main.html  summary.html  therapeutic_options.html  types.html  util.html
reference/ipr/annotate/: index.html
reference/ipr/connection/: index.html
reference/ipr/inputs/: index.html
reference/ipr/ipr/: index.html
reference/ipr/main/: index.html
reference/ipr/summary/: index.html
reference/ipr/therapeutic_options/: index.html
reference/ipr/types/: index.html
reference/ipr/util/: index.html
search/: search_index.json
tests/: constants.py  test_annotate.py  test_connection.py  test_inputs.py  test_ipr.py  test_main.py  test_probe.py  test_summary.py  test_util.py  util.py
tests/test_data/: copy_variants.short.tab  copy_variants.tab  expression.tab  fusions.tab  small_mutations.short.tab  small_mutations.tab  small_mutations_probe.tab
tests/test_data/json_examples/: sm_and_exp.json  sm_only.json
tests/test_ipr/: test_annotate.py  test_inputs.py  test_main.py
tests/test_ipr/test_data/: expression.short.tab  expression3.tab  small_mutations.short.tab  small_mutations_probe.tab
variant_inputs/: index.html
(+1 files in other folders)
