[flake8]
ignore = W503
    E501
    E203
    ANN002
    ANN003
    ANN101
    ANN102
    ANN202
    ANN204

[isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
known_standard_library = requests


[metadata]
name = ipr
version = 3.12.2
url = https://github.com/bcgsc/pori_ipr_python
author_email = ipr@bcgsc.ca
author = ipr
maintainer_email = ipr@bcgsc.ca
maintainer = ipr
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
dependency_links = []
include_package_data = True
install_requires =
    # graphkb>=1.11.0
    biopython
    progressbar2
    pandas>=1.1.0
    jsonschema
    requests<2.29.0
    typing_extensions>=3.7.4.2,<4.4

[options.extras_require]
deploy = twine; wheel; m2r
test = pytest; pytest-cov; pytest-runner
doc = mkdocs; mkdocs-material; markdown-refdocs; mkdocs-redirects
dev =
    twine
    wheel
    m2r
    pytest
    pytest-runner
    pytest-cov
    mkdocs
    mkdocs-material
    mkdocs-redirects
    markdown-refdocs
    flake8
    black
    flake8-annotations
    isort
    mypy

[options.package_data]
ipr = ipr/content.spec.json, py.typed
graphkb = py.typed

[options.entry_points]
console_scripts =
    ipr = ipr.main:command_interface
